--- a/index.html
+++ b/index.html
@@ -3,28 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Anônimo</title>
+    <title>ChatBot - Enviar e Receber Mensagens</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="chat-container">
-        <header>
-            <h2>Chat Anônimo</h2>
-            <p>Envie sua mensagem de forma anônima!</p>
-        </header>
+        <h2>ChatBot</h2>
         <div id="messages" class="messages"></div>
-        <div class="input-container">
-            <input type="text" id="nameInput" placeholder="Seu nome (opcional)" autocomplete="off">
-            <input type="text" id="messageInput" placeholder="Digite sua mensagem..." maxlength="200" autocomplete="off">
-            <button id="sendButton">Enviar</button>
-            <button id="emojiButton">😊</button>
-            <button id="clearButton">Limpar Chat</button>
+        <div class="input-section">
+            <input type="text" id="messageInput" placeholder="Digite sua mensagem...">
+            <button onclick="sendMessage()">Enviar</button>
         </div>
-        <div id="feedback" class="feedback"></div>
-        <div id="messageCount" class="message-count">Total de mensagens: 0</div>
-        <button id="themeToggle">Tema Escuro</button>
     </div>
-    <audio id="sendSound" src="send-sound.mp3" preload="auto"></audio> <!-- Adicione um arquivo de som -->
     <script src="index.js"></script>
 </body>
 </html>
